tests/ui/type-alias-impl-trait/different_args_considered_equal3.stderr
error: lifetime may not live long enough
  --> $DIR/different_args_considered_equal3.rs:16:5
   |
LL | fn get_iter<'a>() -> impl IntoIterator<Item = Opaque<'a>> {
   |             -- lifetime `'a` defined here
LL |     None::<Opaque<'static>>
   |     ^^^^^^^^^^^^^^^^^^^^^^^ returning this value requires that `'a` must outlive `'static`

error: aborting due to 1 previous error

